--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jinu Kurian </title>
+    <title>pug learning </title>
     <meta name="Description" content="This is a meta description with lorem ipsum dolor simet">
     <meta name="keywords" content="">
     <link rel="canonical" href="">
     <!-- Social Media Tags-->
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Jinu Kurian | White Rabbit Group">
+    <meta property="og:title" content="HTML Boilerplate | White Rabbit Group">
     <meta name="author" content="White Rabbit Group">
     <meta property="og:url" content="index.html">
     <meta property="og:image" name="image" content="images/meta.jpg">
@@ -16,7 +16,7 @@
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
-    <meta property="og:site_name" content="Jinu Kurian">
+    <meta property="og:site_name" content="HTML Boilerplate">
     <meta property="og:description" content="This is a meta description with lorem ipsum dolor simet">
     <meta name="twitter:card" content="summary">
     <link rel="stylesheet" href="css/style.min.css">
