--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>pug learning </title>
+    <title>Jinu Kurian | Senior UI Developer</title>
     <meta name="Description" content="This is a meta description with lorem ipsum dolor simet">
     <meta name="keywords" content="">
     <link rel="canonical" href="">
