--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Jinu Kurian | Senior UI Developer</title>
-    <meta name="Description" content="This is a meta description with lorem ipsum dolor simet">
+    <meta name="Description" content="Creative UI Developer based in Kochi with 7 years of solid experience in UI development. Skilled in HTML5,CSS3, SASS, jQuery, GSAP animations, Barba.js, Page speed optimisations, HTML Emails templates and more.">
     <meta name="keywords" content="">
     <link rel="canonical" href="">
     <!-- Social Media Tags-->
