--- a/index.html
+++ b/index.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Jinu Kurian | Senior UI Developer</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="Description" content="Creative UI Developer based in Kochi with 7 years of solid experience in UI development. Skilled in HTML5,CSS3, SASS, jQuery, GSAP animations, Barba.js, Page speed optimisations, HTML Emails templates and more.">
     <meta name="keywords" content="">
     <link rel="canonical" href="">
-    <!-- Social Media Tags-->
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="HTML Boilerplate | White Rabbit Group">
-    <meta name="author" content="White Rabbit Group">
+    <meta property="og:title" content="Jinu Kurian | Senior UI Developer">
+    <meta name="author" content="Jinu Kuria ">
     <meta property="og:url" content="index.html">
     <meta property="og:image" name="image" content="images/meta.jpg">
     <meta property="og:image:secure_url" content="images/meta.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
-    <meta property="og:site_name" content="HTML Boilerplate">
-    <meta property="og:description" content="This is a meta description with lorem ipsum dolor simet">
+    <meta property="og:site_name" content="Jinu Kurian">
+    <meta property="og:description" content="Creative UI Developer based in Kochi with 7 years of solid experience in UI development. Skilled in HTML5,CSS3, SASS, jQuery, GSAP animations, Barba.js, Page speed optimisations, HTML Emails templates and more.">
     <meta name="twitter:card" content="summary">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
+    <link rel="manifest" href="images/icons/site.webmanifest">
+    <link rel="mask-icon" href="images/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <header class="page-head page-head--masthead">
       <div class="page-head-wrapper">
         <div class="container-fluid">
-          <nav class="navbar"><a class="navbar-brand" href="/"><img src="images/logo.png" alt="Logo"></a>
+          <nav class="navbar"><a class="navbar-brand" href="/"><img src="images/logo-white.png" alt="Jinu Kurian"></a>
             <ul class="navbar-nav">
-              <li class="nav__item"><a class="nav-link nav__item_link" href="/">home</a></li>
-              <li class="nav__item"><a class="nav-link nav__item_link" href="/">About</a></li>
-              <li class="nav__item"><a class="nav-link nav__item_link" href="/">Contact</a></li>
+                  <li class="nav__item active"><a class="nav__item_link" href="#home">Home</a></li>
+                  <li class="nav__item"><a class="nav__item_link" href="#about">About</a></li>
+                  <li class="nav__item"><a class="nav__item_link" href="#skills">Skills</a></li>
+                  <li class="nav__item"><a class="nav__item_link" href="#experience">Experience</a></li>
+                  <li class="nav__item"><a class="nav__item_link" href="#contact">Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -37,21 +48,69 @@
     </header>
     <div id="main-wrapper">
       <section class="hero-section">
-        <figure class="hero"></figure><img class="hero__img" src="images/banner.png" alt="Homepage Hero">
+        <figure class="hero" style="background-image: url(images/banner.jpg)"></figure>
       </section>
-      <section class="text-section">
-        <div class="container">
-          <h2 class="text-center">This is a text section</h2>
-          <div class="row">
-            <div class="grid-md-6">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati repudiandae magnam sed nesciunt suscipit labore sequi sapiente consectetur aliquid. Ex minus accusamus officia veniam modi neque reiciendis doloribus dolorum voluptatem.</p>
+      <div id="main-content">
+        <section class="section-about" id="about">
+          <div class="container">
+            <div class="section-box">
+              <div class="profile">
+                <div class="row">
+                  <div class="grid-xs-4">
+                    <div class="profile-photo"><img src="images/jinukurian.jpg" alt="Jinu Kurian"></div>
+                  </div>
+                  <div class="grid-xs-8">
+                    <div class="profile-info">
+                      <div class="profile-preword"><span>Hello</span></div>
+                      <h1 class="profile-title"><span>I'm</span> Jinu Kurian</h1>
+                      <h2 class="profile-position">Senior UI Developer</h2>
+                    </div>
+                    <ul class="profile-list">
+                      <li><strong class="title">Age</strong><span class="cont">28</span></li>
+                      <li><strong class="title">Address</strong><span class="cont">Panakkattu(H), Kandanad, Ernakulam, Kerala</span></li>
+                      <li><strong class="title">E-mail</strong><span class="cont"><a href="mailto:jinukurian7@gmail.com">jinukurian7@gmail.com</a></span></li>
+                      <li><strong class="title">Phone</strong><span class="cont"><a href="tel:+918891280830">+91 8891280830</a></span></li>
+                      <li><strong class="title">Experiece</strong><span class="cont">7 year</span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="profile-social">
+                <ul class="social">
+                  <li><a href="https://twitter.com/Jinukurian7" target="_blank"><i class="gnuicon gnuicon-twitter"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/jinu-kurian-b19a1471/" target="_blank"><i class="gnuicon gnuicon-linkedin"></i></a></li>
+                  <li><a href="https://plus.google.com/u/0/113852808250798831018" target="_blank"><i class="gnuicon gnuicon-google-plus"></i></a></li>
+                  <li><a href="http://stackoverflow.com/users/4947434/jinu-kurian" target="_blank"><i class="gnuicon gnuicon-stack-overflow"></i></a></li>
+                </ul>
+              </div>
             </div>
-            <div class="grid-md-6">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati repudiandae magnam sed nesciunt suscipit labore sequi sapiente consectetur aliquid. Ex minus accusamus officia veniam modi neque reiciendis doloribus dolorum voluptatem.</p>
+            <div class="section-txt-btn">
+              <p><a class="btn btn-primary" target="_blank" href="files/Jinu-CV.pdf" alt="Download Resume">Download Resume</a></p>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </div>
+    <div class="preloader">
+      <div class="preloader-content">
+        <h4>Jinu Kurian</h4>
+        <div class="preloader-load" id="preloader">
+          <div class="preloader-load-first">
+            <svg viewbox="0 0 100 1.7" preserveaspectratio="none" style="width: 100%; height: 100%;">
+              <path d="M 0,0.85 L 100,0.85" stroke="#191923" stroke-width="1.7" fill-opacity="0"></path>
+              <path class="progressbar" d="M 0,0.85 L 100,0.85" stroke="#ffc107" stroke-width="1.7" fill-opacity="0"></path>
+            </svg>
+            <div class="progressbar-text">0 %</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="page-footer">
+      <div class="page-footer-wrapper">
+        <div class="container-fluid"></div>
+      </div>
+    </footer>
+    <script src="js/vendors.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
