--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="page-head page-head--masthead">
       <div class="page-head-wrapper">
         <div class="container-fluid">
-          <nav class="navbar"><a class="navbar-brand" href="/"><img src="images/logo-white.png" alt="Jinu Kurian"></a>
+          <nav class="navbar"><a class="navbar-brand" href="/"><img src="images/logo.svg" alt="Jinu Kurian"></a>
             <ul class="navbar-nav">
                   <li class="nav__item active"><a class="nav__item_link" href="#home">Home</a></li>
                   <li class="nav__item"><a class="nav__item_link" href="#about">About</a></li>
@@ -51,7 +51,7 @@
         <figure class="hero" style="background-image: url(images/banner.jpg)"></figure>
       </section>
       <div id="main-content">
-        <section class="section-about" id="about">
+        <section class="section section-about" id="about">
           <div class="container">
             <div class="section-box">
               <div class="profile">
@@ -62,25 +62,31 @@
                   <div class="grid-xs-8">
                     <div class="profile-info">
                       <div class="profile-preword"><span>Hello</span></div>
-                      <h1 class="profile-title"><span>I'm</span> Jinu Kurian</h1>
+                      <h1 class="profile-title"><span>I'm</span><em>Jinu Kurian</em></h1>
                       <h2 class="profile-position">Senior UI Developer</h2>
                     </div>
                     <ul class="profile-list">
-                      <li><strong class="title">Age</strong><span class="cont">28</span></li>
-                      <li><strong class="title">Address</strong><span class="cont">Panakkattu(H), Kandanad, Ernakulam, Kerala</span></li>
-                      <li><strong class="title">E-mail</strong><span class="cont"><a href="mailto:jinukurian7@gmail.com">jinukurian7@gmail.com</a></span></li>
-                      <li><strong class="title">Phone</strong><span class="cont"><a href="tel:+918891280830">+91 8891280830</a></span></li>
-                      <li><strong class="title">Experiece</strong><span class="cont">7 year</span></li>
+                          <li><strong class="title">age</strong><span class="content">28</span>
+                          </li>
+                          <li><strong class="title">Address</strong><span class="content">Panakkattu(H), Kandanad, Ernakulam, Kerala</span>
+                          </li>
+                          <li><strong class="title">E-mail</strong><span class="content"><a href="mailto:jinukurian7@gmail.com">jinukurian7@gmail.com</a></span>
+                          </li>
+                          <li><strong class="title">Phone</strong><span class="content"><a href="tel:+918891280830">+91 8891280830</a></span>
+                          </li>
+                          <li><strong class="title">Experiece</strong><span class="content">7 year</span>
+                          </li>
                     </ul>
                   </div>
                 </div>
               </div>
               <div class="profile-social">
                 <ul class="social">
-                  <li><a href="https://twitter.com/Jinukurian7" target="_blank"><i class="gnuicon gnuicon-twitter"></i></a></li>
-                  <li><a href="https://www.linkedin.com/in/jinu-kurian-b19a1471/" target="_blank"><i class="gnuicon gnuicon-linkedin"></i></a></li>
-                  <li><a href="https://plus.google.com/u/0/113852808250798831018" target="_blank"><i class="gnuicon gnuicon-google-plus"></i></a></li>
-                  <li><a href="http://stackoverflow.com/users/4947434/jinu-kurian" target="_blank"><i class="gnuicon gnuicon-stack-overflow"></i></a></li>
+                      <li><a href="https://twitter.com/Jinukurian7" target="_blank"><span class="gnu-icon gnu-icon-twitter"> </span></a></li>
+                      <li><a href="https://www.linkedin.com/in/jinukurian7/" target="_blank"><span class="gnu-icon gnu-icon-linkedin"> </span></a></li>
+                      <li><a href="https://github.com/Jinukurian7" target="_blank"><span class="gnu-icon gnu-icon-github"> </span></a></li>
+                      <li><a href="http://stackoverflow.com/users/4947434/jinu-kurian" target="_blank"><span class="gnu-icon gnu-icon-stack-overflow"> </span></a></li>
+                      <li><a href="https://codepen.io/jinukurian7" target="_blank"><span class="gnu-icon gnu-icon-codepen"> </span></a></li>
                 </ul>
               </div>
             </div>
@@ -89,9 +95,189 @@
             </div>
           </div>
         </section>
+        <section class="section about-me">
+          <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <blockquote>
+              <p>Hello! I’m Jinu Kurian. UI Developer with 3 year experience in structuring, developing and implementing interactive websites.Able to complete projects efficiently and satisfy clients with attractive, user friendly websites. I'm hard working, self-motivated and a dedicated guy, love to expolre, big hunger for new knowledge. I love to inspire other people around me get insired by them. Optimist for life</p>
+            </blockquote>
+          </div>
+        </section>
+        <section class="section section-skills" id="skills">
+          <div class="container">
+            <h2 class="section-title">Professional Skills</h2>
+            <div class="section-box skill-box">
+              <div class="row">
+                    <div class="grid-sm-6">
+                      <div class="skill-progress-bar">
+                        <div class="bar-data">
+                          <div class="bar-title">HTML</div>
+                          <div class="bar-value">90%</div>
+                        </div>
+                        <div class="bar-line">
+                          <div class="bar-fill" data-value="90%"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="grid-sm-6">
+                      <div class="skill-progress-bar">
+                        <div class="bar-data">
+                          <div class="bar-title">Javascript</div>
+                          <div class="bar-value">60%</div>
+                        </div>
+                        <div class="bar-line">
+                          <div class="bar-fill" data-value="60%"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="grid-sm-6">
+                      <div class="skill-progress-bar">
+                        <div class="bar-data">
+                          <div class="bar-title">SCSS</div>
+                          <div class="bar-value">90%</div>
+                        </div>
+                        <div class="bar-line">
+                          <div class="bar-fill" data-value="90%"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="grid-sm-6">
+                      <div class="skill-progress-bar">
+                        <div class="bar-data">
+                          <div class="bar-title">Pug</div>
+                          <div class="bar-value">75%</div>
+                        </div>
+                        <div class="bar-line">
+                          <div class="bar-fill" data-value="75%"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="grid-sm-6">
+                      <div class="skill-progress-bar">
+                        <div class="bar-data">
+                          <div class="bar-title">Photoshop</div>
+                          <div class="bar-value">90%</div>
+                        </div>
+                        <div class="bar-line">
+                          <div class="bar-fill" data-value="90%"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="grid-sm-6">
+                      <div class="skill-progress-bar">
+                        <div class="bar-data">
+                          <div class="bar-title">Illustrator</div>
+                          <div class="bar-value">70%</div>
+                        </div>
+                        <div class="bar-line">
+                          <div class="bar-fill" data-value="70%"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="grid-sm-6">
+                      <div class="skill-progress-bar">
+                        <div class="bar-data">
+                          <div class="bar-title">Sketch</div>
+                          <div class="bar-value">80%</div>
+                        </div>
+                        <div class="bar-line">
+                          <div class="bar-fill" data-value="80%"></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="grid-sm-6">
+                      <div class="skill-progress-bar">
+                        <div class="bar-data">
+                          <div class="bar-title">Figma</div>
+                          <div class="bar-value">90%</div>
+                        </div>
+                        <div class="bar-line">
+                          <div class="bar-fill" data-value="90%"></div>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="section section-experience" id="experience">
+          <div class="container">
+            <h2 class="section-title">Work Experience</h2>
+            <div class="timeline">
+              <div class="timeline-inner">
+                    <div class="timeline-box">
+                      <div class="timeline-box-inner">
+                        <div class="date">2017 October - Current</div>
+                        <h3>White Rabbit Group</h3>
+                        <h4>Senior UI Developer</h4>
+                        <p>Working as part of a multi-disciplinary team, carrying out tasks including conversion of PSD/AI/InDesign to html, Newsletter etc. Had a specific brief to ensure the websites build for customer&amp;rsquo;s precisely matched their design.</p>
+                      </div>
+                    </div>
+                    <div class="timeline-box">
+                      <div class="timeline-box-inner">
+                        <div class="date">2015 May - 2017 October</div>
+                        <h3>Phases India Technology Pvt. Ltd</h3>
+                        <h4>Associate UI developer</h4>
+                        <p>Working as part of a multi-disciplinary team, carrying out tasks including conversion of PSD/AI/InDesign to html, Newsletter etc. Had a specific brief to ensure the websites build for customer&amp;rsquo;s precisely matched their design.</p>
+                      </div>
+                    </div>
+                    <div class="timeline-box">
+                      <div class="timeline-box-inner">
+                        <div class="date">2014 June - 2015 May</div>
+                        <h3>QPlay Tech Pvt. Ltd</h3>
+                        <h4>UI/UX Developer and designer</h4>
+                        <p>Working as part of a multi-disciplinary team, carrying out tasks including conversion of PSD/AI/InDesign to html, Newsletter etc. Had a specific brief to ensure the websites build for customer&amp;rsquo;s precisely matched their design.</p>
+                      </div>
+                    </div>
+                    <div class="timeline-box">
+                      <div class="timeline-box-inner">
+                        <div class="date">2014 May - 2014 June</div>
+                        <h3>PixelDreams, Kochin</h3>
+                        <h4>UI Developer/SEO (trainee)</h4>
+                        <p>Working as part of a multi-disciplinary team, carrying out tasks including conversion of PSD/AI/InDesign to html, Newsletter etc. Had a specific brief to ensure the websites build for customer&amp;rsquo;s precisely matched their design.</p>
+                      </div>
+                    </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="section section-education" id="education">
+          <div class="container">
+            <h2 class="section-title">Education</h2>
+            <div class="timeline">
+              <div class="timeline-inner">
+                    <div class="timeline-box">
+                      <div class="timeline-box-inner">
+                        <div class="date">2010 - 2014</div>
+                        <h3>B.Tech - Information Technology</h3>
+                        <h4>TocH Institute of Science &amp; Technology (CUSAT)</h4>
+                        <p></p>
+                      </div>
+                    </div>
+                    <div class="timeline-box">
+                      <div class="timeline-box-inner">
+                        <div class="date">2008 - 2010</div>
+                        <h3>Higher Secondary</h3>
+                        <h4>St: Ignatius H.S.S, Kanjiramattom</h4>
+                        <p></p>
+                      </div>
+                    </div>
+                    <div class="timeline-box">
+                      <div class="timeline-box-inner">
+                        <div class="date">2003 - 2008</div>
+                        <h3>High School</h3>
+                        <h4>St: Mary's H.S, Kandanad</h4>
+                        <p></p>
+                      </div>
+                    </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
     <div class="preloader">
+      <div class="preloader-cover"></div>
       <div class="preloader-content">
         <h4>Jinu Kurian</h4>
         <div class="preloader-load" id="preloader">
@@ -100,7 +286,7 @@
               <path d="M 0,0.85 L 100,0.85" stroke="#191923" stroke-width="1.7" fill-opacity="0"></path>
               <path class="progressbar" d="M 0,0.85 L 100,0.85" stroke="#ffc107" stroke-width="1.7" fill-opacity="0"></path>
             </svg>
-            <div class="progressbar-text">0 %</div>
+            <div class="progressbar-text"> </div>
           </div>
         </div>
       </div>
