--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="container">
             <h2 class="section-title">About Me</h2>
             <blockquote>
-              <p>Hello! I’m Jinu Kurian. UI Developer with 3 year experience in structuring, developing and implementing interactive websites.Able to complete projects efficiently and satisfy clients with attractive, user friendly websites. I'm hard working, self-motivated and a dedicated guy, love to expolre, big hunger for new knowledge. I love to inspire other people around me get insired by them. Optimist for life</p>
+              <p>Hello! I’m Jinu Kurian. UI Developer with 6+ years of experience in structuring, developing, and implementing pixel-perfect interactive websites. Able to complete projects efficiently and satisfy clients with attractive, user-friendly websites. I'm hard-working, self-motivated, and a dedicated guy who loves to explore and has big hunger for new knowledge. I love to inspire other people around me to get inspired by them. Optimist for life</p>
             </blockquote>
           </div>
         </section>
